...
                                <color key="backgroundColor" red="0.094117647060000004" green="0.67450980390000004" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="6xB-DF-Xhh"/>
                                    <constraint firstAttribute="width" constant="198" id="pDE-fY-ZZR"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
                                <state key="normal" title="Add Movie">
                                    <color key="titleColor" red="0.22352941179999999" green="0.019607843140000001" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="sendMovieObject" destination="rzK-cr-ZBh" eventType="touchUpInside" id="o9U-wl-fFU"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pVy-OQ-ee3">
                                <rect key="frame" x="49" y="216" width="226" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="ipn-u9-xhx"/>
                                    <constraint firstAttribute="width" constant="226" id="omG-cT-TKI"/>
                                </constraints>
                                <nil key="textColor"/>
...
