...
        super.viewDidLoad()
        //MARK:- set Delegates
     self.imagePicker.delegate    =  self
     self.dateTextField.delegate  =  self
     self.titleTextField.delegate =  self
     self.overViewField.delegate  =  self
      self.title = "My Movie"
     setViewsStyle()
    }
    @objc func tapView(tapGesture : UITapGestureRecognizer){
        view.endEditing(true)
    }
    @objc func changeDate(datePicker : UIDatePicker){
...
